#2 fix the autoloading of mollie api

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "kiener/mollie-payments-plugin",
   "description": "Mollie Payments",
-  "version": "v1.0.3",
+  "version": "v1.0.4",
   "type": "shopware-platform-plugin",
   "license": "MIT",
   "authors": [
@@ -29,8 +29,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Kiener\\MolliePayments\\": "src/",
-      "Mollie\\Api\\": "vendor/mollie/mollie-api-php/src/"
+      "Kiener\\MolliePayments\\": "src/"
     }
   }
 }
