--- a/src/Resources/snippet/de_DE/mollie.components.creditcard.de-DE.json
+++ b/src/Resources/snippet/de_DE/mollie.components.creditcard.de-DE.json
@@ -7,7 +7,7 @@
         "cardNumberLabel": "Kreditkartennummer",
         "cardExpiryDateLabel": "Ablaufdatum",
         "cardVerificationCodeLabel": "CVC",
-        "creditCardTagLine": "Zahlung gesichert und zur Verfügung gestell von"
+        "creditCardTagLine": "Zahlung gesichert und zur Verfügung gestellt von"
       }
     }
   }
