--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "kiener/mollie-payments-plugin",
   "description": "Mollie Payments",
-  "version": "v1.0.16",
+  "version": "v1.0.17",
   "type": "shopware-platform-plugin",
   "license": "MIT",
   "authors": [
@@ -27,6 +27,16 @@
       "de-DE": "Mit Mollie integrieren Sie alle wichtigen internationalen und lokalen Zahlungsmethoden in nur einem Schritt in Ihren Shopware-Webshop. Starten Sie noch heute!",
       "en-GB": "With Mollie you integrate every major global and local payment method in your Shopware webshop in one go. Start growing your business with effortless payments today!",
       "nl-NL": "Met Mollie integreer je alle belangrijke internationale en lokale betaalmethoden in één keer in je Shopware webshop. Start vandaag nog!"
+    },
+    "manufacturerLink": {
+      "de-DE": "https://store.shopware.com/mollie.html",
+      "en-GB": "https://store.shopware.com/mollie.html",
+      "nl-NL": "https://store.shopware.com/mollie.html"
+    },
+    "supportLink": {
+      "de-DE": "https://www.mollie.com/contact",
+      "en-GB": "https://www.mollie.com/contact",
+      "nl-NL": "https://www.mollie.com/contact"
     }
   },
   "config": {
