NTR: add PHPInsight + CS Fixer

--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -55,9 +55,7 @@ jobs:
       - name: Run PHPUnit
         run: make test -B
 
-  # ------------------------------------------------------------------------------------------------------------------------
-
-  analyzers:
+  phpstan:
     name: Static Analyzers
     needs: unit_tests
     runs-on: ubuntu-latest
@@ -77,11 +75,51 @@ jobs:
       - name: Run PHPStan
         run: make stan -B
 
+  phpcsfixer:
+    name: PHP CS Fixer
+    needs: phpstan
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Clone Code
+        uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 7.2
+
+      - name: Install Dependencies
+        run: make dev -B
+
+      - name: Run PHP CS Fixer
+        run: make csfix -B
+
+  phpinsights:
+    name: PHP CS Fixer
+    needs: phpcsfixer
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Clone Code
+        uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 7.2
+
+      - name: Install Dependencies
+        run: make dev -B
+
+      - name: Run PHPInsights Analyser
+        run: make insights -B
+
   # ------------------------------------------------------------------------------------------------------------------------
 
   integration:
     name: Integration Tests | Shopware ${{ matrix.shopware }}
-    needs: analyzers
+    needs: phpinsights
     runs-on: ubuntu-latest
     strategy:
       matrix:
