--- a/.github/workflows/pr_pipe.yml
+++ b/.github/workflows/pr_pipe.yml
@@ -1,10 +1,7 @@
-name: CI Pipeline
+name: PR Pipeline
 
 on:
-  push:
-    branches:
-      - master
-  workflow_dispatch:
+  pull_request:
     branches:
       - master
 
