Revert "NTR: PHPStan Rules for Manufacturer and StrictTypes"
This reverts commit 87be4e884f116828777ad06bd696b4b6f1264264.

--- a/composer.json
+++ b/composer.json
@@ -47,8 +47,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "MolliePayments\\Tests\\": "tests/PHPUnit/",
-      "MolliePayments\\PHPStan\\": "tests/PHPStan/"
+      "MolliePayments\\Tests\\": "tests/PHPUnit/"
     }
   },
   "suggest": {
