--- a/.phpstan.neon
+++ b/.phpstan.neon
@@ -9,3 +9,7 @@ parameters:
         - ./src/Storefront/*
         - ./src/Subscriber/*
 
+services:
+    - class: MolliePayments\PHPStan\Rules\NoManufacturerRule
+      tags:
+        - phpstan.rules.rule
