NTR: update PHPInsights minimum levels

--- a/.github/workflows/pr_pipe.yml
+++ b/.github/workflows/pr_pipe.yml
@@ -90,7 +90,7 @@ jobs:
         run: make csfix -B
 
   phpinsights:
-    name: PHP CS Fixer
+    name: PHPInsights
     needs: phpcsfixer
     runs-on: ubuntu-latest
     steps:
