--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -93,7 +93,7 @@ jobs:
         run: make csfix -B
 
   phpinsights:
-    name: PHP CS Fixer
+    name: PHPInsights
     needs: phpcsfixer
     runs-on: ubuntu-latest
     steps:
