MOL-429: cypress pipeline install dependencies

--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -181,6 +181,14 @@ jobs:
       - name: Clone Code
         uses: actions/checkout@v2
 
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 7.4
+
+      - name: Install Dependencies
+        run: make install -B
+
       - name: Start Docker
         run: |
           docker run --rm -p 80:80 --name shop -d dockware/play:${{ matrix.shopware }}
