--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,9 @@
     "phpunit/phpunit": "^9.5",
     "phpstan/phpstan": "^0.12.82",
     "friendsofphp/php-cs-fixer": "^2.18",
-    "nunomaduro/phpinsights": "^1.14"
+    "nunomaduro/phpinsights": "^1.14",
+    "phpcompatibility/php-compatibility": "^9.3",
+    "squizlabs/php_codesniffer": "^3.6"
   },
   "scripts": {
     "post-install-cmd": [
