Exclude Hydrator from checks

--- a/.phpstan.lvl8.neon
+++ b/.phpstan.lvl8.neon
@@ -6,6 +6,7 @@ parameters:
         - ./src/Controller/*
         - ./src/Handler/*
         - ./src/Helper/*
+        - ./src/Hydrator/*
         - ./src/Resources/*
         - ./src/Service/*
         - ./src/Storefront/*
