--- a/.phpstan.lvl8.neon
+++ b/.phpstan.lvl8.neon
@@ -2,6 +2,7 @@ parameters:
     level: 8
     paths:
         - ./src
+        - ./src/Service/ApplePayDirect
     excludes_analyse:
         - ./src/Controller/*
         - ./src/Handler/*
