--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -152,7 +152,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        shopware: [ '6.4.1.0', '6.4.0.0', '6.3.5.4', '6.3.5.2' ]
+        shopware: [ '6.4.3.1', '6.4.1.0', '6.4.0.0', '6.3.5.4', '6.3.5.2' ]
     steps:
 
       - name: Clone Code
