--- a/.github/workflows/pr_pipe.yml
+++ b/.github/workflows/pr_pipe.yml
@@ -7,6 +7,65 @@ on:
 
 jobs:
 
+
+  jest:
+    name: Jest Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone Code
+        uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 7.4
+
+      - name: Install Dependencies
+        run: make dev -B
+
+      - name: Run Jest
+        run: make jest -B
+
+  eslint:
+    name: ESLint
+    runs-on: ubuntu-latest
+    needs: jest
+    steps:
+      - name: Clone Code
+        uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 7.4
+
+      - name: Install Dependencies
+        run: make dev -B
+
+      - name: Run ESLint
+        run: make eslint -B
+
+  stylelint:
+    name: Stylelint
+    runs-on: ubuntu-latest
+    needs: eslint
+    steps:
+      - name: Clone Code
+        uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 7.4
+
+      - name: Install Dependencies
+        run: make dev -B
+
+      - name: Run Stylelint
+        run: make stylelint -B
+
+  # ------------------------------------------------------------------------------------------------------------------------
+
   php_checks:
     name: PHP Syntax Checks
     runs-on: ubuntu-latest
@@ -63,7 +122,7 @@ jobs:
         run: make dev -B
 
       - name: Run PHPUnit
-        run: make test -B
+        run: make phpunit -B
 
   phpstan:
     name: Static Analyzers
