--- a/src/Resources/app/administration/package.json
+++ b/src/Resources/app/administration/package.json
@@ -24,6 +24,8 @@
         "eslint-plugin-standard": "^5.0.0",
         "flow-bin": "^0.160.0",
         "jest": "^27.1.1",
-        "stylelint": "13.13.1"
+        "stylelint": "13.13.1",
+        "stylelint-config-standard": "18.3.0",
+        "stylelint-scss": "3.9.2"
     }
 }
