Ignore admin and storefront node modules

--- a/src/Resources/app/administration/package.json
+++ b/src/Resources/app/administration/package.json
@@ -3,8 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "author": "Mollie B.V.",
-    "dependencies": {
-    },
+    "dependencies": {},
     "devDependencies": {
         "@babel/cli": "^7.5.5",
         "@babel/core": "^7.5.5",
