--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,12 @@
 .DS_Store
 /tests/Cypress/package-lock.json
 
+src/Resources/app/administration/node_modules
+src/Resources/app/administration/package-lock.json
+
 src/Resources/app/storefront/dist/
+src/Resources/app/storefront/node_modules
+src/Resources/app/storefront/package-lock.json
 
 src/Resources/public/administration/css/
 src/Resources/public/administration/js/
