--- a/src/Resources/app/storefront/package.json
+++ b/src/Resources/app/storefront/package.json
@@ -2,9 +2,8 @@
     "name": "mollie-shopware6-storefront-tests",
     "version": "1.0.0",
     "description": "",
-  "author": "Mollie B.V.",
-    "dependencies": {
-    },
+    "author": "Mollie B.V.",
+    "dependencies": {},
     "devDependencies": {
         "@babel/cli": "^7.5.5",
         "@babel/core": "^7.5.5",
