--- a/.phpstan.lvl8.neon
+++ b/.phpstan.lvl8.neon
@@ -3,6 +3,7 @@ parameters:
     paths:
         - ./src
         - ./src/Service/ApplePayDirect
+        - ./src/Service/Logger
     excludes_analyse:
         - ./src/Resources/app/administration/node_modules/*
         - ./src/Resources/app/storefront/node_modules/*
