NTR: add pipelines for new beta branch

--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - master
+      - beta/subscription
   workflow_dispatch:
     branches:
       - master
+      - beta/subscription
 
 jobs:
 
