--- a/src/Resources/app/administration/package.json
+++ b/src/Resources/app/administration/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "description": "",
     "author": "Mollie B.V.",
-    "dependencies": {},
+    "dependencies": {
+    },
     "devDependencies": {
         "@babel/cli": "^7.5.5",
         "@babel/core": "^7.5.5",
@@ -11,11 +12,11 @@
         "@babel/plugin-transform-runtime": "^7.15.0",
         "@babel/preset-env": "^7.15.6",
         "@babel/runtime": "^7.15.4",
+        "babel-eslint": "10.0.2",
         "babel-jest": "^27.1.1",
         "babel-plugin-transform-flow-interface-imports": "^1.0.1",
         "babel-preset-env": "^1.7.0",
         "eslint": "^7.32.0",
-        "babel-eslint": "10.0.2",
         "eslint-config-standard": "^16.0.3",
         "eslint-plugin-import": "^2.24.2",
         "eslint-plugin-node": "^11.1.0",
@@ -23,8 +24,8 @@
         "eslint-plugin-standard": "^5.0.0",
         "flow-bin": "^0.160.0",
         "jest": "^27.1.1",
-        "stylelint": "13.13.1",
-        "stylelint-config-standard": "18.3.0",
-        "stylelint-scss": "3.9.2"
+        "stylelint": "^14.1.0",
+        "stylelint-config-standard": "^24.0.0",
+        "stylelint-scss": "^4.0.1"
     }
 }
