--- a/src/Resources/app/storefront/package.json
+++ b/src/Resources/app/storefront/package.json
@@ -23,8 +23,8 @@
         "eslint-plugin-standard": "^5.0.0",
         "flow-bin": "^0.160.0",
         "jest": "^27.1.1",
-        "stylelint": "13.13.1",
-        "stylelint-config-standard": "18.3.0",
-        "stylelint-scss": "3.9.2"
+        "stylelint": "^14.1.0",
+        "stylelint-config-standard": "^24.0.0",
+        "stylelint-scss": "^4.0.1"
     }
 }
