NTR: disable fail fast strategy in pipelines

--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -175,6 +175,7 @@ jobs:
     name: Integration Tests | Shopware ${{ matrix.shopware }}
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         shopware: [ '6.4.0.0', '6.3.0', '6.2.0', '6.1.0' ]
     steps:
@@ -211,6 +212,7 @@ jobs:
     needs: integration
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         include:
           - shopware: '6.4.7.0'
