--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -107,7 +107,7 @@ jobs:
 
   # ------------------------------------------------------------------------------------------------------------------------
 
-  unit_tests:
+  phpunit:
     name: Unit Tests | PHP ${{ matrix.php }}
     needs: php_min
     runs-on: ubuntu-latest
@@ -129,9 +129,31 @@ jobs:
       - name: Run PHPUnit
         run: make phpunit -B
 
+  infection:
+    name: Mutation Tests | PHP ${{ matrix.php }}
+    needs: phpunit
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php: [ '7.4' ]
+    steps:
+      - name: Clone Code
+        uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+
+      - name: Install Dependencies
+        run: make dev -B
+
+      - name: Run Infection
+        run: make infection -B
+
   phpstan:
     name: Static Analyzers
-    needs: unit_tests
+    needs: infection
     runs-on: ubuntu-latest
     steps:
 
