--- a/.github/workflows/pr_pipe.yml
+++ b/.github/workflows/pr_pipe.yml
@@ -123,9 +123,31 @@ jobs:
       - name: Run PHPUnit
         run: make phpunit -B
 
+  infection:
+    name: Mutation Tests | PHP ${{ matrix.php }}
+    needs: phpunit
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php: [ '7.4' ]
+    steps:
+      - name: Clone Code
+        uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+
+      - name: Install Dependencies
+        run: make dev -B
+
+      - name: Run Infection
+        run: make infection -B
+
   phpstan:
     name: Static Analyzers
-    needs: phpunit
+    needs: infection
     runs-on: ubuntu-latest
     steps:
 
