--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,8 @@
     "phpstan/phpstan": "^0.12.82",
     "friendsofphp/php-cs-fixer": "^2.18",
     "phpcompatibility/php-compatibility": "^9.3",
-    "squizlabs/php_codesniffer": "^3.6"
+    "squizlabs/php_codesniffer": "^3.6",
+    "infection/infection": "^0.25.4"
   },
   "scripts": {
     "post-install-cmd": [
