--- a/.github/workflows/pr_pipe.yml
+++ b/.github/workflows/pr_pipe.yml
@@ -24,7 +24,7 @@ jobs:
         run: make dev -B
 
       - name: Run PHP CS Fixer
-        run: make csfix -B
+        run: php -v && make csfix -B
 
   # ------------------------------------------------------------------------------------------------------------------------
 
