NTR: also build plugin in PR pipeline

--- a/.github/workflows/pr_pipe.yml
+++ b/.github/workflows/pr_pipe.yml
@@ -209,14 +209,15 @@ jobs:
 
       - name: Start Docker
         run: |
-          docker run --rm --name shop -d dockware/play:${{ matrix.shopware }}
+          docker run --rm --name shop -d dockware/dev:${{ matrix.shopware }}
           sleep 30
           docker logs shop
 
       - name: Upload into Docker
         run: docker cp $(pwd)/. shop:/var/www/html/custom/plugins/MolliePayments
 
-      - name: Install Plugin
+      - name: Install and Build Plugin
         run: |
-          docker exec shop bash -c "php bin/console plugin:refresh"
-          docker exec shop bash -c "php bin/console plugin:install MolliePayments --activate"
+          docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make clean'
+          docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make install'
+          docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make build'
