NTR: add swagger for headless api

--- a/tests/Swagger/makefile
+++ b/tests/Swagger/makefile
@@ -8,7 +8,7 @@ help:
 # ---------------------------------------------------------------------------------------------
 
 run: ## Starts a Docker container with Swagger
-	docker run --rm -p 8080:8080 -v ${PWD}/mollie.yaml:/usr/share/nginx/html/mollie.yaml -e URLS="[ { name: 'Mollie Plugin API', url: '/mollie.yaml' } ]" --name swagger -d swaggerapi/swagger-ui
+	docker run --rm -p 8080:8080 -v ${PWD}/mollie.yaml:/usr/share/nginx/html/mollie.yaml -v ${PWD}/mollie-headless.yaml:/usr/share/nginx/html/mollie-headless.yaml -e PERSIST_AUTHORIZATION="true" -e URLS="[ { name: 'Mollie Plugin API', url: '/mollie.yaml' }, { name: 'Mollie Headless API', url: '/mollie-headless.yaml' } ]" --name swagger -d swaggerapi/swagger-ui
 
 stop: ## Stops the Docker container
 	docker rm -f swagger
