--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -237,6 +237,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - shopware: '6.4.8.0'
+            php: '8.1'
           - shopware: '6.4.7.0'
             php: '8.1'
           - shopware: '6.4.6.1'
